--- a/styles/_client.scss
+++ b/styles/_client.scss
@@ -1,9 +1,9 @@
-@forward "./global.scss";
+// @forward "./global.scss";
 
 #client{
     text-align: center;
     padding: var(--size-12) var(--size-4);
-            .img-grid{
+            .logosGrid{
                 display: grid;
                 grid-template-columns: repeat(7,1fr);
                 justify-items: center;
@@ -11,14 +11,14 @@
             }
 }
 @media all and (min-width:1100px){
-    .heading-2{
+    .tittle{
         font-size: var(--size-12);
     }
     .description{
         font-size: var(--size-6);
          padding-bottom: var(--size-12);
         }
-            .img-grid{
+            .logosGrid{
                 .img-logo{
                     width: 50px;
                     height: auto;
