--- a/styles/_community.scss
+++ b/styles/_community.scss
@@ -1,4 +1,4 @@
-@forward "./global.scss";
+
 
 #community{
     text-align: center;
@@ -22,7 +22,7 @@
     }
 }
 @media all and (min-width:1100px){
-    .heading-3{
+    .tittle{
         font-size: var(--size-12);
     }
     .description{
