--- a/styles/_heropage.scss
+++ b/styles/_heropage.scss
@@ -1,22 +1,22 @@
-@forward "./global.scss";
+
 
 #heropage{
     text-align: center;
     padding: var(--size-12) var(--size-4);
     background-color: var(--color-silver);
-
 }
  @media all and (min-width:1100px){
 #heropage{
-    .wrapper{
+    .heroBody{
         display: grid;
         grid-template-columns: 2fr 1fr;
         justify-items: center;
+        align-items: center;
         .content{
             max-width:900px;
             margin: auto;
             text-align: left;
-            .heading-1{
+            h1{
                 font-size: var(--size-20);
                 padding:var(--size-20) 0 var(--size-8) 0;
             }
@@ -24,7 +24,8 @@
                 font-size: var(--size-6);
                 padding-bottom: var(--size-12);
             }
-            .btn-type-1{
+            .btn{ 
+            &.btnPrimary{
                 font-size: var(--size-6);
                 margin: 0;
                 margin-bottom: var(--size-24);
@@ -36,5 +37,6 @@
             align-self: center;
         }
     }
+}
 }
 }
