--- a/styles/variables/_typography.scss
+++ b/styles/variables/_typography.scss
@@ -1,4 +1,7 @@
-
+@font-face {
+  font-family: Inter;
+  src: url(font/Inter/Inter-VariableFont_slnt\,wght.ttf);
+}
 :root {
   --size-1:0.25rem;
   --size-2:0.5rem;
